### Remove push all from Makefile (HEAD -> refactoring)
>Fri, 26 Feb 2021 11:58:41 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Improve makefile and doc generation
>Fri, 26 Feb 2021 11:57:10 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add submodule for github (origin/refactoring)
>Fri, 26 Feb 2021 11:22:56 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add directory for gh-pages
>Fri, 26 Feb 2021 10:00:25 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Update .gitignore
>Fri, 26 Feb 2021 07:11:34 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Update docs with gallery, coverage report and tests report
>Fri, 26 Feb 2021 07:10:46 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add tests
>Fri, 26 Feb 2021 07:09:13 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### refactor the code to take into account the different structures of the file formats. Using a plugin approach
>Fri, 26 Feb 2021 07:00:10 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add log configuration in the package during the distribution to avoid warnings
>Fri, 26 Feb 2021 06:57:59 +0100
